Use ditto for zipping

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -750,17 +750,10 @@ jobs:
       - name: Remove development settings
         run: rm -f ./publish/osx-universal/appsettings.Development.json
 
-      # --- Adjust HTTP port and macOS paths ---
-      - name: Adjust HTTP port and macOS paths
+      # --- Adjust HTTP port ---
+      - name: Adjust HTTP port
         run: |
-          # Adjust HTTP port for macOS (5000 -> 5002) to avoid AirPlay conflicts
           sed -i '' 's|"Url": "http://\*:5000"|"Url": "http://*:5002"|' ./publish/osx-universal/appsettings.json
-          
-          # Adjust log path to use macOS Application Support directory
-          sed -i '' 's|"path": "./logs/log-.txt"|"path": "~/Library/Application Support/Lighthouse/logs/log-.txt"|' ./publish/osx-universal/appsettings.json
-          
-          # Adjust database path to use macOS Application Support directory
-          sed -i '' 's|"ConnectionString": "Data Source=LighthouseAppContext.db"|"ConnectionString": "Data Source=~/Library/Application Support/Lighthouse/LighthouseAppContext.db"|' ./publish/osx-universal/appsettings.json
 
       - name: Import code signing certificates
         uses: apple-actions/import-codesign-certs@v3
@@ -813,11 +806,16 @@ jobs:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         run: |
           UNIVERSAL_DIR="./publish/osx-universal"
-          ZIP_PATH="./publish/Lighthouse-universal.zip"
+          ZIP_PATH="./publish/Lighthouse-universal-macos.zip"
 
-          echo "Creating zip archive for notarization..."
-          cd "$UNIVERSAL_DIR"
-          zip -r "../Lighthouse-universal.zip" .
+          echo "Creating Apple-correct zip archive with ditto..."
+          ditto -c -k \
+            --keepParent \
+            --sequesterRsrc \
+            --preserveHFSCompression \
+            "$UNIVERSAL_DIR" \
+            "$ZIP_PATH"
+
           cd ../..
 
           echo "Submitting for notarization..."
@@ -861,7 +859,6 @@ jobs:
           fi
 
           echo "Binary notarization successful!"
-          rm "$ZIP_PATH"
 
       - name: Retrieve notarization log
         if: always() && env.SUBMISSION_ID != ''
@@ -883,14 +880,14 @@ jobs:
             echo "======================="
           fi
 
-      - name: Upload signed macOS universal binary artifact
+      - name: Upload signed macOS universal zip artifact
         uses: actions/upload-artifact@v4
         with:
           name: Lighthouse-osx-${{ needs.tag.outputs.version }}
-          path: ./publish/osx-universal
+          path: ./publish/Lighthouse-universal-macos.zip
 
-  pkg-macos:
-    name: Create macOS .pkg installer
+  verifymacos:
+    name: Verify macOS version
     runs-on: macos-latest
     needs:
       - codesign-macos
@@ -905,233 +902,93 @@ jobs:
           name: Lighthouse-osx-${{ needs.tag.outputs.version }}
           path: ./publish
 
-      - name: Create App Bundle Structure
+      - name: Extract the ditto zip
         run: |
-          # Create the .app bundle structure
-          mkdir -p "Lighthouse.app/Contents/MacOS"
-          mkdir -p "Lighthouse.app/Contents/Resources"
-          
-          # Move the executable into the bundle
-          mv "./publish/Lighthouse" "Lighthouse.app/Contents/MacOS/Lighthouse"
-          
-          # Copy other files to Resources
-          cp "./publish/appsettings.json" "Lighthouse.app/Contents/Resources/"
-          
-          # Create Info.plist
-          cat > "Lighthouse.app/Contents/Info.plist" << 'EOF'
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-              <key>CFBundleExecutable</key>
-              <string>Lighthouse</string>
-              <key>CFBundleIdentifier</key>
-              <string>com.letpeoplework.lighthouse</string>
-              <key>CFBundleName</key>
-              <string>Lighthouse</string>
-              <key>CFBundleDisplayName</key>
-              <string>Lighthouse</string>
-              <key>CFBundleVersion</key>
-              <string>${{ needs.tag.outputs.fileversion }}</string>
-              <key>CFBundleShortVersionString</key>
-              <string>${{ needs.tag.outputs.version }}</string>
-              <key>CFBundlePackageType</key>
-              <string>APPL</string>
-              <key>CFBundleSignature</key>
-              <string>????</string>
-              <key>LSMinimumSystemVersion</key>
-              <string>10.15</string>
-              <key>NSHighResolutionCapable</key>
-              <true/>
-              <key>LSUIElement</key>
-              <false/>
-          </dict>
-          </plist>
-          EOF
-          
-          # Set executable permission
-          chmod +x "Lighthouse.app/Contents/MacOS/Lighthouse"
+          ZIP_FILE=./publish/Lighthouse-universal-macos.zip
+          EXTRACT_DIR=./publish/Lighthouse-universal
+          mkdir -p "$EXTRACT_DIR"
+          echo "Extracting $ZIP_FILE to $EXTRACT_DIR"
+          ditto -x -k "$ZIP_FILE" "$EXTRACT_DIR"
 
-      - name: Import code signing certificates
-        uses: apple-actions/import-codesign-certs@v3
-        with:
-          p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
-          p12-password: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-
-      - name: Sign App Bundle
-        run: |          
-          IDENTITY=$(security find-identity -v -p codesigning | grep "Developer ID Application" | head -n 1 | sed -n 's/.*"\(.*\)".*/\1/p')
-          if [ -z "$IDENTITY" ]; then
-            echo "Error: No Developer ID Application certificate found in keychain"
-            security find-identity -v -p codesigning
+      - name: Verify codesign on binary
+        run: |
+          BINARY=./publish/Lighthouse-universal/Lighthouse
+          if [ ! -f "$BINARY" ]; then
+            echo "Error: binary not found at $BINARY"
+            ls -la ./publish/Lighthouse-universal
             exit 1
           fi
-          echo "Signing identity: $IDENTITY"
 
-          # Sign the app bundle
-          codesign --force --options runtime --deep --timestamp --sign "$IDENTITY" "Lighthouse.app"
+          echo "Verifying codesign for $BINARY"
+          codesign --verify --deep --strict --verbose=4 "$BINARY"
+          codesign -dvvv "$BINARY" || true
           
-          # Verify signing
-          codesign --verify --deep --strict --verbose=4 "Lighthouse.app"
+          echo "Checking if binary would pass Gatekeeper (standalone executable)..."
+          spctl --assess --type execute --verbose=4 "$BINARY" || echo "Note: spctl rejection is expected for standalone executables outside app bundles"
 
-      - name: Create .pkg installer
-        run: |
-          # Create scripts directory for post-install
-          mkdir -p scripts
-          cat > scripts/postinstall << 'EOF'
-          #!/bin/bash
-          # Make sure the app is executable after installation
-          chmod +x "/Applications/Lighthouse.app/Contents/MacOS/Lighthouse"
-          # Register the app with the system
-          /System/Library/Frameworks/CoreServices.framework/Frameworks/LaunchServices.framework/Support/lsregister -f "/Applications/Lighthouse.app"
-          exit 0
-          EOF
-          chmod +x scripts/postinstall
-          
-          # Create the installer package
-          pkgbuild --root . \
-                   --install-location /Applications \
-                   --identifier com.letpeoplework.lighthouse \
-                   --version ${{ needs.tag.outputs.fileversion }} \
-                   --scripts ./scripts \
-                   Lighthouse-${{ needs.tag.outputs.version }}.pkg
-
-      - name: Sign .pkg installer
-        run: |          
-          IDENTITY=$(security find-identity -v -p codesigning | grep "Developer ID Application" | head -n 1 | sed -n 's/.*"\(.*\)".*/\1/p')
-            if [ -z "$IDENTITY" ]; then
-              echo "Error: No Developer ID Application certificate found in keychain"
-              security find-identity -v -p codesigning
-              exit 1
-            fi
-            echo "Signing identity: $IDENTITY"
-
-          # Sign the installer
-          productsign --timestamp --sign "$IDENTITY" "Lighthouse-${{ needs.tag.outputs.version }}.pkg" "Lighthouse-${{ needs.tag.outputs.version }}-signed.pkg"
-          
-          # Replace unsigned with signed
-          mv "Lighthouse-${{ needs.tag.outputs.version }}-signed.pkg" "Lighthouse-${{ needs.tag.outputs.version }}.pkg"
-          
-          # Verify signing
-          pkgutil --check-signature "Lighthouse-${{ needs.tag.outputs.version }}.pkg"
-
-      - name: Notarize .pkg installer
+      - name: Retrieve notarization info using submission id
+        id: notaryinfo
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         run: |
-          # Submit for notarization
-          xcrun notarytool submit "Lighthouse-${{ needs.tag.outputs.version }}.pkg" \
-            --apple-id "$APPLE_ID" \
-            --password "$APPLE_APP_PASSWORD" \
-            --team-id "$APPLE_TEAM_ID" \
-            --wait
-          
-          # Staple the notarization ticket
-          xcrun stapler staple "Lighthouse-${{ needs.tag.outputs.version }}.pkg"
-          
-          # Verify stapling
-          xcrun stapler validate "Lighthouse-${{ needs.tag.outputs.version }}.pkg"
+          SUBMISSION_ID="${{ needs.codesign-macos.outputs.submission_id }}"
+          echo "Using submission id: $SUBMISSION_ID"
 
-      - name: Upload .pkg installer artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: Lighthouse-osx-pkg-${{ needs.tag.outputs.version }}
-          path: "Lighthouse-${{ needs.tag.outputs.version }}.pkg"
-
-
-  verifymacos:
-    name: Verify macOS .pkg installer
-    runs-on: macos-latest
-    needs:
-      - pkg-macos
-      - tag
-
-    if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
-
-    steps:
-      - name: Download .pkg installer
-        uses: actions/download-artifact@v4
-        with:
-          name: Lighthouse-osx-pkg-${{ needs.tag.outputs.version }}
-          path: ./pkg
-
-      - name: Verify .pkg is signed and notarized
-        run: |
-          PKG_FILE="./pkg/Lighthouse-${{ needs.tag.outputs.version }}.pkg"
-          echo "Verifying .pkg signature and notarization..."
-          
-          # Check signature
-          pkgutil --check-signature "$PKG_FILE"
-          
-          # Verify notarization (stapled ticket)
-          xcrun stapler validate "$PKG_FILE"
-          
-          # Test Gatekeeper assessment
-          spctl --assess --type install "$PKG_FILE"
-          echo "✅ .pkg installer is properly signed, notarized, and stapled"
-
-      - name: Install Lighthouse.app
-        run: |
-          PKG_FILE="./pkg/Lighthouse-${{ needs.tag.outputs.version }}.pkg"
-          echo "Installing Lighthouse.app..."
-          sudo installer -pkg "$PKG_FILE" -target /
-          
-          # Verify installation
-          if [ -f "/Applications/Lighthouse.app/Contents/MacOS/Lighthouse" ]; then
-            echo "✅ Lighthouse.app installed successfully"
-            ls -la "/Applications/Lighthouse.app/Contents/MacOS/"
-          else
-            echo "❌ Installation failed - executable not found"
+          if [ -z "$SUBMISSION_ID" ]; then
+            echo "Error: submission id missing"
             exit 1
           fi
 
-      - name: Run installed Lighthouse
+          xcrun notarytool info "$SUBMISSION_ID" \
+            --apple-id "$APPLE_ID" \
+            --password "$APPLE_APP_PASSWORD" \
+            --team-id "$APPLE_TEAM_ID" \
+            --output-format json > notarization-info.json
+
+          cat notarization-info.json
+
+          STATUS=$(echo "$(cat notarization-info.json)" | grep -o '"status":"[^"]*"' | head -1 | cut -d'"' -f4)
+          echo "Notarization status: $STATUS"
+          if [ "$STATUS" != "Accepted" ]; then
+            echo "Error: Notarization status is not Accepted"
+            exit 1
+          fi
+
+      - name: Set executable permission
+        run: chmod +x ./publish/Lighthouse-universal/Lighthouse
+
+      - name: Run Lighthouse (sqlite)
         run: |
-          echo "Starting Lighthouse from installed location..."
-          cd "/Applications/Lighthouse.app/Contents/MacOS"
-          
-          # Run Lighthouse in background
           ./Lighthouse > lighthouse.log 2>&1 &
-          LIGHTHOUSE_PID=$!
-          echo "Lighthouse started with PID: $LIGHTHOUSE_PID"
+        working-directory: ./publish/Lighthouse-universal
         env:
           Database__Provider: sqlite
-          Database__ConnectionString: 'Data Source=~/Library/Application Support/Lighthouse/LighthouseAppContext.db'
+          Database__ConnectionString: 'Data Source=lighthouse.db'
 
       - name: Wait for Lighthouse to start
         run: |
-          echo "Waiting for Lighthouse to be ready..."
           end=$((SECONDS+30))
           while [ $SECONDS -lt $end ]; do
-            if curl --silent --fail --insecure https://localhost:5002; then
-              echo "✅ Lighthouse is running on port 5002!"
+            if curl --silent --fail --insecure https://localhost:5001; then
+              echo "Service is up!"
               exit 0
             fi
             sleep 1
           done
-          echo "❌ Timeout waiting for Lighthouse to start"
+          echo "Timeout waiting for service"
           exit 1
 
-      - name: Stop Lighthouse and show logs
+          cat lighthouse.log
+        working-directory: ./publish/Lighthouse-universal
+            
+      - name: Stop Lighthouse Server
         if: always()
         run: |
-          echo "Stopping Lighthouse..."
           pkill Lighthouse || true
-          
-          echo "=== Application logs from MacOS directory ==="
-          cat "/Applications/Lighthouse.app/Contents/MacOS/lighthouse.log" 2>/dev/null || echo "No log file in MacOS directory"
-          
-          echo "=== Application logs from Library directory ==="
-          find "$HOME/Library/Application Support/Lighthouse" -name "*.txt" -type f 2>/dev/null | while read logfile; do
-            echo "--- $logfile ---"
-            cat "$logfile"
-          done || echo "No log files found in Library directory"
-          
-          echo "=== Cleanup ==="
-          rm -rf "/Applications/Lighthouse.app/Contents/MacOS/lighthouse.log" 2>/dev/null || true
-          rm -rf "$HOME/Library/Application Support/Lighthouse" 2>/dev/null || true
+          cat ./publish/Lighthouse-universal/lighthouse.log || true
+
 
   # Disabled codesign-windows job until a signing certificate is available
   #  codesign-windows:
@@ -1186,7 +1043,6 @@ jobs:
     - verifypostgres
     - verifymacos
     - codesign-macos
-    - pkg-macos
 
     if: github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]'
 
@@ -1248,11 +1104,6 @@ jobs:
           name: Lighthouse-linux-x64-${{ needs.tag.outputs.version }}
           path: LighthouseArtifacts/linux-x64
 
-      - uses: actions/download-artifact@v4
-        with:
-          name: Lighthouse-osx-pkg-${{ needs.tag.outputs.version }}
-          path: LighthouseArtifacts/osx-pkg
-
       - uses: vimtor/action-zip@v1.2
         with:
           files: LighthouseArtifacts/win-x64
@@ -1260,20 +1111,17 @@ jobs:
 
       - uses: vimtor/action-zip@v1.2
         with:
-          files: LighthouseArtifacts/osx-universal-binary
-          dest: Lighthouse-osx.zip
-
-      - uses: vimtor/action-zip@v1.2
-        with:
           files: LighthouseArtifacts/linux-x64
           dest: Lighthouse-linux-x64.zip
 
-      - name: Copy .pkg file to root
-        run: cp LighthouseArtifacts/osx-pkg/Lighthouse-${{ needs.tag.outputs.version }}.pkg ./
+      # Dont re-zip macOS to preserve flags/attributes
+      - name: Prepare macOS release zip
+        run: |
+          cp LighthouseArtifacts/osx-universal-binary/Lighthouse-universal-macos.zip Lighthouse-osx.zip
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "Lighthouse-win-x64.zip,Lighthouse-osx.zip,Lighthouse-linux-x64.zip,Lighthouse-${{ needs.tag.outputs.version }}.pkg"
+          artifacts: "Lighthouse-win-x64.zip,Lighthouse-osx.zip,Lighthouse-linux-x64.zip"
           tag: ${{ needs.tag.outputs.version }}
           prerelease: true
           name: "Lighthouse ${{ needs.tag.outputs.version }}"
