--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -824,24 +824,37 @@ jobs:
             p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
             p12-password: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
 
-        - name: Create entitlements file
+        - name: Create entitlements.plist
           run: |
-            cat > entitlements.plist << EOF
+            ENTITLEMENTS_FILE="./publish/entitlements.plist"
+            cat > "$ENTITLEMENTS_FILE" << 'EOF'
             <?xml version="1.0" encoding="UTF-8"?>
-            <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+            <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN"
+            "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
             <plist version="1.0">
             <dict>
-              <key>com.apple.security.cs.allow-unsigned-executable-memory</key>
-              <true/>
-              <key>com.apple.security.cs.disable-library-validation</key>
-              <true/>
-              <key>com.apple.security.network.server</key>
-              <true/>
-              <key>com.apple.security.network.client</key>
-              <true/>
+                <!-- Allow self-contained .NET runtime to load native libraries -->
+                <key>com.apple.security.cs.disable-library-validation</key>
+                <true/>
+
+                <!-- Network access for local web server -->
+                <key>com.apple.security.network.client</key>
+                <true/>
+                <key>com.apple.security.network.server</key>
+                <true/>
+
+                <!-- File access for Library/Application Support and Library/Logs -->
+                <key>com.apple.security.files.library.application-support.read-write</key>
+                <true/>
+                <key>com.apple.security.files.library.logs.read-write</key>
+                <true/>
             </dict>
             </plist>
             EOF
+
+            echo "Entitlements created at $ENTITLEMENTS_FILE"
+            ls -lh "$ENTITLEMENTS_FILE"
+
 
         - name: Sign all binaries and app bundle
           env:
@@ -861,7 +874,7 @@ jobs:
             echo "=== Signing .dylib files ==="
             find "$MACOS_DIR" -name "*.dylib" -type f | while read file; do
               echo "Signing: $file"
-              codesign --sign "$IDENTITY" --timestamp --options runtime --force --verbose "$file"
+              cocodesign --sign "$IDENTITY" --timestamp --force --verbose "$file"
               codesign --verify --strict --verbose=2 "$file"
               echo "✓ Signed and verified: $file"
             done
@@ -875,22 +888,13 @@ jobs:
             fi
 
             chmod +x "$BINARY_PATH"
-            codesign --sign "$IDENTITY" \
-              --entitlements entitlements.plist \
-              --timestamp \
-              --options runtime \
-              --force \
-              --verbose=4 \
-              "$BINARY_PATH"
+            codesign --sign "$IDENTITY" --options runtime --entitlements ./publish/entitlements.plist --timestamp --force --verbose=4 "$BINARY_PATH"
+            codesign --verify --strict --verbose=2 "$BINARY_PATH"
             echo "✓ Main executable signed"
 
             echo "=== Signing App Bundle ==="
-            # Sign the bundle without --deep flag (--deep can cause issues with resource files)
-            # The bundle signature will seal all contents, even unsigned resources
-            codesign --sign "$IDENTITY" --timestamp --options runtime --force --verbose=4 "$APP_DIR"
-            
-            # Verify without --deep and --strict to allow unsigned resources
-            codesign --verify --verbose=2 "$APP_DIR"
+            codesign --sign "$IDENTITY" --timestamp --options runtime --entitlements ./publish/entitlements.plist --force --verbose=4 "$APP_DIR"
+            codesign --verify --deep --strict --verbose=2 "$APP_DIR"
             codesign -dvvv "$APP_DIR" | grep -E "(Signature|timestamp|runtime|Authority)" || true
             echo "✓ App bundle signed and verified successfully"
 
