--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -818,6 +818,17 @@ jobs:
             ls -la "$CONTENTS_DIR"
             ls -la "$MACOS_DIR"
 
+        - name: Move wwwroot to Resources
+          run: |
+            APP_DIR="./publish/Lighthouse.app"
+            MACOS_DIR="$APP_DIR/Contents/MacOS"
+            RESOURCES_DIR="$APP_DIR/Contents/Resources"
+            
+            if [ -d "$MACOS_DIR/wwwroot" ]; then
+              mv "$MACOS_DIR/wwwroot" "$RESOURCES_DIR/wwwroot"
+              echo "Moved wwwroot to Resources"
+            fi
+
         - name: Import code signing certificates
           uses: apple-actions/import-codesign-certs@v3
           with:
