--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -800,7 +800,7 @@ jobs:
                 <key>CFBundlePackageType</key>
                 <string>APPL</string>
                 <key>CFBundleShortVersionString</key>
-                <string>${{ needs.tag.outputs.version }}</string>
+                <string>${{ needs.tag.outputs.fileversion }}</string>
                 <key>CFBundleVersion</key>
                 <string>${{ needs.tag.outputs.fileversion }}</string>
                 <key>LSMinimumSystemVersion</key>
