Show logifles from folder

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1137,64 +1137,50 @@ jobs:
 
         - name: Run Lighthouse from Applications
           run: |
-            echo "=== Testing direct execution ==="
-            # Try running directly to see immediate errors
-            timeout 5 /Applications/Lighthouse.app/Contents/MacOS/Lighthouse 2>&1 || true
-            
-            echo "=== Checking executable permissions ==="
-            ls -la /Applications/Lighthouse.app/Contents/MacOS/Lighthouse
-            
-            echo "=== Checking library dependencies ==="
-            otool -L /Applications/Lighthouse.app/Contents/MacOS/Lighthouse | head -20
-            
-            echo "=== Starting as background process ==="
-            /Applications/Lighthouse.app/Contents/MacOS/Lighthouse > lighthouse.log 2>&1 &
+            echo "Starting Lighthouse..."
+            /Applications/Lighthouse.app/Contents/MacOS/Lighthouse &
             echo $! > lighthouse.pid
-            
-            # Give it a moment to crash if it's going to
-            sleep 2
-            
-            if ps -p $(cat lighthouse.pid) > /dev/null 2>&1; then
-              echo "Process is running (PID: $(cat lighthouse.pid))"
-            else
-              echo "Process has already exited!"
-              echo "=== Checking system logs ==="
-              log show --predicate 'process == "Lighthouse"' --last 1m --info || true
-            fi
+            echo "Started with PID: $(cat lighthouse.pid)"
 
         - name: Wait for Lighthouse to start
           run: |
-            end=$((SECONDS+30))
+            echo "Waiting for service to start..."
+            end=$((SECONDS+60))
             while [ $SECONDS -lt $end ]; do
-              if curl --silent --fail --insecure https://localhost:5001; then
-                echo "Service is up!"
+              # Check if process is still running
+              if ! ps -p $(cat lighthouse.pid) > /dev/null 2>&1; then
+                echo "ERROR: Process died at ${SECONDS}s"
+                exit 1
+              fi
+              
+              # Try to connect to the service (try both possible ports)
+              if curl --silent --fail --insecure http://localhost:5002/health 2>/dev/null || \
+                curl --silent --fail --insecure https://localhost:5001/health 2>/dev/null || \
+                curl --silent --fail --insecure http://localhost:5002 2>/dev/null || \
+                curl --silent --fail --insecure https://localhost:5001 2>/dev/null; then
+                echo "✓ Service is up at ${SECONDS}s!"
                 exit 0
               fi
-              sleep 1
+              
+              if [ $((SECONDS % 10)) -eq 0 ]; then
+                echo "Still waiting... (${SECONDS}s elapsed, process still running)"
+              fi
+              sleep 2
             done
-            echo "Timeout waiting for service"
-            cat lighthouse.log || true
+            
+            echo "❌ Timeout waiting for service (process still running but not responding)"
+            
+            echo "=== Checking file system ==="
+            echo "Database directory:"
+            ls -la "$HOME/Library/Application Support/Lighthouse/" 2>/dev/null || echo "Database directory doesn't exist"
+            
+            echo "Log directory:"
+            ls -la "$HOME/Library/Logs/Lighthouse/" 2>/dev/null || echo "Log directory doesn't exist"
+            
             exit 1
 
-        - name: Stop Lighthouse Server
+        - name: Verify log files
           if: always()
-          run: |
-            if [ -f lighthouse.pid ]; then
-              kill $(cat lighthouse.pid) || true
-            fi
-            pkill -f "Lighthouse.app" || true
-            cat lighthouse.log || true
-
-        - name: Check macOS crash reports
-          if: always()
-          run: |
-            echo "=== Checking for crash reports ==="
-            ls -lt ~/Library/Logs/DiagnosticReports/ | head -10 || true
-            
-            # Show any Lighthouse crash reports
-            find ~/Library/Logs/DiagnosticReports/ -name "*Lighthouse*" -exec cat {} \; || true
-
-        - name: Verify log files exist in correct directory
           run: |
             LOG_DIR="$HOME/Library/Logs/Lighthouse"
             echo "Checking for log files in: $LOG_DIR"
@@ -1212,6 +1198,15 @@ jobs:
             
             echo "Found $LOG_FILES log file(s) in $LOG_DIR"
             ls -la "$LOG_DIR"
+
+            for logfile in "$LOG_DIR"/*.txt; do
+              if [ -f "$logfile" ]; then
+                echo "=== Contents of $logfile ==="
+                cat "$logfile"
+                echo ""
+              fi
+            done
+
 
         - name: Verify database exists in correct directory
           run: |
